# omera_report_automation

./: README.md  build_installer.bat  build_installer.ps1  check_prerequisites.ps1
exec_reports/: .env.template  CLAUDE.md  README.md  file_version_info.txt  installer.nsi  mcp_usage.db  pyproject.toml  replace.py  server.py
exec_reports/templates/: c_template.docx  s_end_page.docx  s_overview.docx  s_singular_candidate.docx
exec_reports/utils/: __init__.py  logging_db.py  mcp_logging.py  merge_assessment.py  merge_data.py  merge_doc.py  shortlist_data.py  table_edit.py  table_merge.py
installer/: add-mcp-server.ps1  check-claude-config.ps1  common-mcp-install.nsh  postinstall  remove-mcp-server.ps1
