[project]
name = "exec-reports-mcp"
version = "1.0.0"
description = "Executive and Board Reports MCP Server - Professional candidate assessment documentation"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Quantium", email = "support@quantium.com" }
]
license = { text = "PROPRIETARY" }
keywords = ["mcp", "reports", "hr", "candidate-assessment", "document-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastmcp>=2.12.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
    "pillow>=11.3.0",
    "lxml>=6.0.1",
    "click>=8.3.0",
    "rich>=14.1.0",
    "httpx>=0.28.1",
    "uvicorn>=0.35.0",
    "starlette>=0.48.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pyinstaller]
# PyInstaller configuration
entry-point = "server.py"
